--- a/第6.2章-最大熵模型.ipynb
+++ b/第6.2章-最大熵模型.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "这里，$f$关于经验概率分布$\\tilde{p}(x,y)$的期望是我们感兴趣的统计指标，我们记做：\n",
     "\n",
-    "$$\\tilde{p}(f) = \\sum_{x,y} \\tilde{p}(x,y)f(x,y)$$\n",
+    "$$E_\\tilde{p}(f) = \\sum_{x,y} \\tilde{p}(x,y)f(x,y)$$\n",
     "\n",
     "我们将上面的指示函数，称为特征函数(feature function)，或者直接叫做特征。"
    ]
@@ -234,17 +234,17 @@
     "首先，我们可以列出我们的模型$p$中特征$f$的期望(the expected value that the model assigns to the corresponding feature function f)：\n",
     "\n",
     "\\begin{align*}\n",
-    " p(f) &= \\sum_{x,y}p(x,y)·f(x,y)\\\\\n",
+    " E_p(f) &= \\sum_{x,y}p(x,y)·f(x,y)\\\\\n",
     "      &= \\sum_{x,y}p(x)·p(y|x)·f(x,y)\\\\\n",
     "\\end{align*}\n",
     "\n",
     "由于我们不知道$p(x)$，因此我们用经验分布$\\tilde{p}(x)$代替，有：\n",
     "\n",
-    "$$p(f) = \\sum_{x,y}\\tilde{p}(x)·p(y|x)·f(x,y)$$\n",
+    "$$E_p(f) = \\sum_{x,y}\\tilde{p}(x)·p(y|x)·f(x,y)$$\n",
     "\n",
     "这时，我们通过下式，“强制”要求我们的模型必须“符合它”：\n",
     "\n",
-    "$$p(f) = \\tilde{p}(f)$$\n",
+    "$$E_p(f) = E_\\tilde{p}(f)$$\n",
     "\n",
     "即：\n",
     "\n",
@@ -544,7 +544,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![IIS](./pic/ch6-1.png)"
+    "![IIS](./pic/ch6-2-1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对$L(\\Lambda)$解最优化问题，最原始的思路是，对$\\Lambda$的每个分量$\\lambda_i$求偏导，然后令每个偏导等于0，解出相应的$\\lambda_i^*$，即得到$\\Lambda^*$。但很难，因为每个偏导置零的方程中都还有其他$\\lambda$分量，相互依赖，很难求解。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IIS是一种迭代更新算法，类似于梯度下降，需要固定参数起始点，并进行一定次数的参数更新。其思路是：在当前$\\Lambda$下，寻找一个唯一的$\\delta$，使得更新$\\Lambda → \\Lambda+\\delta$让似然函数$L$的值“增大”。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这种思路乍看与梯度下降一样，但IIS的更新值$\\delta$，并不是梯度下降中的梯度的反向向量——IIS用的是另一个$\\delta$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "首先，在确定$\\Lambda$的前提下，计算更新后似然函数的改变量：\n",
+    "\n",
+    "$$L(\\Lambda+\\delta)-L(\\Lambda) = \\sum_{x,y}\\tilde{p}(x,y)\\sum_i\\delta_if_i(x,y)-\\sum_x\\tilde{p}(x)log\\frac{Z_{\\Lambda+\\delta}(x)}{Z_{\\Lambda}(x)}$$\n",
+    "\n",
+    "利用不等式：\n",
+    "\n",
+    "$$-log\\alpha \\ge 1-\\alpha,\\quad \\alpha>0$$\n",
+    "\n",
+    "__建立改变量的下确界__：\n",
+    "\n",
+    "$$L(\\Lambda+\\delta)-L(\\Lambda) \\ge A(\\delta\\ |\\ \\Lambda)$$\n",
+    "\n",
+    "其中：\n",
+    "\n",
+    "$$A(\\delta\\ |\\ \\Lambda) = \\sum_{x,y}\\tilde{p}(x,y)\\sum_i\\delta_if_i(x,y)+1-\\sum_x\\tilde{p}(x)\\sum_yp_{\\Lambda}(y|x)exp\\sum_i\\delta_if_i(x,y)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IIS的核心思想：在$\\Lambda$固定时，找到$\\delta^*$，使$A(\\delta^*|\\Lambda)$最大——改变量的下确界最大，等价的可以认为改变量已经大得足够好了。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "但是，$\\frac{\\partial A}{\\partial \\delta_i}=0$，还是不好解。因此，IIS将进一步降低下确界，使得新的下确界$B(\\delta|\\Lambda)$的$\\frac{\\partial B}{\\partial \\delta_i}=0$好解一些：具体来说，方程仅有$\\delta_i$一个变量。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__进一步降低下确界__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对每个样本，引入$f^\\#(x,y)$：\n",
+    "\n",
+    "$$f^\\#(x,y) = \\sum_i f_i(x,y)$$\n",
+    "\n",
+    "因为$f_i$是0-1函数，因此$f^\\#(x,y)$表示该样本“拥有”的特征数量。因此，可以将$A(\\delta\\ |\\ \\Lambda)$改写为：\n",
+    "\n",
+    "$$A(\\delta\\ |\\ \\Lambda) = \\sum_{x,y}\\tilde{p}(x,y)\\sum_i\\delta_if_i(x,y)+1-\\sum_x\\tilde{p}(x)\\sum_yp_{\\Lambda}(y|x)exp\\Big( f^\\#(x,y) \\sum_i \\frac{\\delta_if_i(x,y)}{f^\\#(x,y)} \\Big)$$\n",
+    "\n",
+    "因为：\n",
+    "\n",
+    "* 指数函数的convex；\n",
+    "* 对任意$i$，有$\\frac{f_i(x,y)}{f^\\#(x,y)}\\ge0$；\n",
+    "* 对任意$i$，有$\\sum_{i=1}^n\\frac{f_i(x,y)}{f^\\#(x,y)}=1$\n",
+    "\n",
+    "根据__詹森不等式__：\n",
+    "\n",
+    "$$exp\\Big( \\sum_i \\frac{f_i(x,y)}{f^\\#(x,y)}\\delta_if^\\#(x,y) \\Big) \\ge \\sum_i \\frac{f_i(x,y)}{f^\\#(x,y)}exp\\Big(\\delta_if^\\#(x,y) \\Big)$$\n",
+    "\n",
+    "因此有：\n",
+    "\n",
+    "$$A(\\delta\\ |\\ \\Lambda) \\ge \\sum_{x,y}\\tilde{p}(x,y)\\sum_i\\delta_if_i(x,y)+1-\\sum_x\\tilde{p}(x)\\sum_yp_{\\Lambda}(y|x)\\sum_i \\frac{f_i(x,y)}{f^\\#(x,y)}exp\\Big(\\delta_if^\\#(x,y) \\Big) = B(\\delta\\ |\\ \\Lambda)$$\n",
+    "\n",
+    "相对不紧的下确界：\n",
+    "\n",
+    "$$L(\\Lambda+\\delta)-L(\\Lambda) \\ge B(\\delta\\ |\\ \\Lambda)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "此时：\n",
+    "\n",
+    "$$\\frac{\\partial B}{\\partial \\delta_i}=\\sum_{x,y}\\tilde{p}(x,y)f_i(x,y)-\\sum_x\\tilde{p}(x)\\sum_yp_{\\Lambda}(y|x)f_i(x,y)exp\\Big(\\delta_if^\\#(x,y) \\Big)$$\n",
+    "\n",
+    "发现，$\\frac{\\partial B}{\\partial \\delta_i}$中只有$\\delta_i$，不含任何其他变量。置零求解即可。这里注意到：\n",
+    "\n",
+    "$$E_\\tilde{p}(f) = \\sum_{x,y} \\tilde{p}(x,y)f(x,y)$$\n",
+    "\n",
+    "故置0方程可以写为：\n",
+    "\n",
+    "$$\\sum_x\\tilde{p}(x)\\sum_yp_{\\Lambda}(y|x)f_i(x,y)exp\\Big(\\delta_if^\\#(x,y) \\Big)=E_\\tilde{p}(f_i)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于上面的置0方程，可能没有__显式解__。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 如果$f^\\#(x,y)$是常数，即对任何的$x,y$，有$f^\\#(x,y)=M$，那么$\\delta_i$有显式解：\n",
+    "\n",
+    "$$\\delta_i = \\frac{1}{M}log\\frac{E_\\tilde{p}(f_i)}{E_p(f_i)}$$\n",
+    "\n",
+    "2. 如果$f^\\#(x,y)$不是常数，那么$\\delta_i$没有显式解，必须通过数值法解——牛顿法：\n",
+    "\n",
+    "将置0方程移项化成$g(\\delta_i)=0$的形式，然后不断按下式迭代，直到$g(\\delta_i^*)$趋近于0：\n",
+    "\n",
+    "$$\\delta_i^{(k+1)}=\\delta_i^{(k)} - \\frac{g(\\delta_i^{(k)})}{g'(\\delta_i^{(k)})}$$"
    ]
   }
  ],
